--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,16 @@ anthropic
 beautifulsoup4
 cohere
 datasets==2.14.3
-deepeval==0.21.34
+#deepeval==0.21.34
+deepeval==1.5.0
 ipykernel
 ipython
 ipywidgets
 jupyterlab>=4.2.5
 litellm==1.44.8
-llama-hub==0.0.72
-llama-index==0.10.13
+#llama-hub==0.0.72
+#llama-index==0.10.13
+llama-index==0.11.21
 loguru==0.7.0
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
@@ -29,4 +31,5 @@ tokenizers==0.15.0
 torch==2.2.0
 tqdm==4.66.3
 transformers
-weaviate-client>=4.5.4
+weaviate-client==4.5.4
+huggingface-hub==0.20.2
